Fix a spacing in the deck builder

--- a/src/components/DeckEditorView/index.css
+++ b/src/components/DeckEditorView/index.css
@@ -34,6 +34,11 @@
 }
 
 .DeckEditorView__checkbox {
-  margin-top: -1em;
   margin-bottom: 2em;
+}
+
+@media (min-width: 700px) {
+  .DeckEditorView__checkbox {
+    margin-top: -1em;
+  }
 }
